# autoware_test

./: .gitignore  README.md  build.sh
PointCloud_convert/: CMakeLists.txt  TypeConvert.cpp
data/map/mini_sil_vector_map/: area.csv  line.csv  point.csv
data/map/sil_unity/: dtlane.csv  idx.csv  lane.csv  line.csv  node.csv  point.csv  point_.csv  roadedge.csv  stopline.csv  whiteline.csv
data/map/sil_vector_map/: area.csv  crosswalk.csv  curb.csv  idx.csv  lane.csv  line.csv  node.csv  point.csv  pole.csv  signaldata.csv  stopline.csv  utilitypole.csv  vector.csv  wayarea.csv  whiteline.csv
data/path/: sil_env_path.txt
data/tf/: sil_tf.launch  tf.launch
documents/: README.md
documents/PointCloud_convert/: minimap.pcd  minimap_.pcd
documents/paper/: mpc.odp
project1-RGBCloudmapping/Mapping/lib/Mapping/: source_code.rar
project1-RGBCloudmapping/RGBCloudProject/config/: sensors_calib_apollo.yml
project1-RGBCloudmapping/RGBCloudProject/data/saved_rgb_clouds/: rgb_pcd_0.pcd
project1-RGBCloudmapping/RGBCloudProject/lib/LidarProcess/: source_code.rar
project2-gnss_projection/src/gnss_projection/: CMakeLists.txt
rgb_mapping_data/params/: front_camera_extrinsic.yaml  left_back_camera_extrinsic.yaml  lidar_extrinsic.yaml  right_back_camera_extrinsic.yaml
rgb_mapping_data/pcd_data/: 11674.pcd  11675.pcd  11676.pcd  11677.pcd  11678.pcd  11679.pcd  11680.pcd  11681.pcd  11682.pcd  11683.pcd  11684.pcd  11685.pcd  11686.pcd  11687.pcd  11688.pcd  11689.pcd  11690.pcd  11691.pcd  11692.pcd  11693.pcd  11694.pcd  11695.pcd  11696.pcd  11697.pcd  11698.pcd  11699.pcd  11700.pcd  11701.pcd  11702.pcd  11703.pcd  11704.pcd  11705.pcd  11706.pcd  11707.pcd  11708.pcd  11709.pcd  11710.pcd  11711.pcd  11712.pcd  11713.pcd  (+58 more)
src/autoware/common/lanelet2_extension/: CMakeLists.txt
src/autoware/common/object_map/: CMakeLists.txt
src/autoware/common/op_planner/src/: PlannerH.cpp  PlanningHelpers.cpp
src/autoware/core_perception/lidar_imm_ukf_pda_track/: CMakeLists.txt
src/autoware/core_perception/lidar_kf_contour_track/nodes/lidar_kf_contour_track/: lidar_kf_contour_track_core.cpp
src/autoware/core_perception/trafficlight_recognizer/: CMakeLists.txt
src/autoware/core_planning/astar_search/src/: astar_search.cpp
src/autoware/core_planning/costmap_generator/: CMakeLists.txt
src/autoware/core_planning/decision_maker/: CMakeLists.txt
src/autoware/core_planning/lane_planner/: CMakeLists.txt
src/autoware/core_planning/lane_planner/nodes/lane_navi/: lane_navi.cpp
src/autoware/core_planning/lane_planner/nodes/lane_rule/: lane_rule.cpp
src/autoware/core_planning/lane_planner/nodes/lane_select/: lane_select_core.cpp
src/autoware/core_planning/lane_planner/nodes/lane_stop/: lane_stop.cpp
src/autoware/core_planning/mpc_follower/launch/: mpc_follower.launch
src/autoware/core_planning/mpc_follower/src/: mpc_follower_core.cpp  mpc_utils.cpp  mpc_waypoints_converter.cpp
src/autoware/core_planning/op_local_planner/nodes/op_trajectory_generator/: op_trajectory_generator_core.cpp
src/autoware/core_planning/pure_pursuit/src/: pure_pursuit.cpp  pure_pursuit_core.cpp
src/autoware/core_planning/waypoint_maker/: CMakeLists.txt
src/autoware/core_planning/waypoint_planner/: CMakeLists.txt
src/autoware/core_planning/waypoint_planner/src/astar_avoid/: astar_avoid.cpp
src/autoware/core_planning/waypoint_planner/src/velocity_set/: libvelocity_set.cpp  velocity_set.cpp
src/autoware/custom/gnss_projection/: CMakeLists.txt  gnss_mapping.md  package.xml
src/autoware/custom/gnss_projection/config/: default.rviz
src/autoware/custom/gnss_projection/launch/: gnss_projection.launch
src/autoware/custom/gnss_projection/src/: gnss_projection_node.cpp
src/autoware/custom/rgb_mapping/: CMakeLists.txt  installOpencv320.sh  package.xml  rgb_mapping.md
src/autoware/custom/rgb_mapping/config/: load_params.rviz  pointcloud_shader.rviz  rgb_mapping.rviz  sensors_data.rviz
src/autoware/custom/rgb_mapping/launch/: load_params.launch  load_sensors_data.launch  test_build_rgb_map.launch  test_load_params.launch  test_load_sensors_data.launch  test_pointcloud_shader.launch  test_rgb_mapping.launch
src/autoware/custom/rgb_mapping/src/: load_params_node.cpp  load_sensors_data_node.cpp  pointcloud_shader_server.cpp  rgb_mapping.cpp
src/autoware/custom/rgb_mapping/srv/: PointCloudShader.srv  getCameraInfo.srv
src/autoware/documentation/autoware_quickstart_examples/launch/rosbag_demo/: my_map.launch
src/autoware/documentation/autoware_quickstart_examples/launch/sil_env_demo/: new_map.launch  new_mpc_planning.launch
src/autoware/utilities/runtime_manager/scripts/: run
